# llmtraceviewer

./: .gitignore  LICENSE  MANIFEST.in  README.md  build.sh  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: LogTable.tsx  layout.tsx  page.tsx
llmtraceviewer/: cli.py  server.py
