[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmtraceviewer"
version = "0.2.0"
description = "A tool to view LLM call traces from JSONL log files."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn"
]

[project.scripts]
llmtraceviewer = "llmtraceviewer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["llmtraceviewer*"]
